[package]
name = "precompile-utils"
authors.workspace = true
description = "Utils to write EVM precompiles."
edition.workspace = true
version = "0.1.0"

[dependencies]
ethereum.workspace = true
sp-core.workspace = true
sp-std.workspace = true
precompile-utils-macro = { path = "macro" }
log = { workspace = true, default-features= true }
num_enum.workspace = true
pallet-evm.workspace = true
frame-support.workspace = true
frame-system.workspace = true
fp-evm.workspace = true

[features]
default = [ "std" ]
std = [
    "sp-core/std",
    "pallet-evm/std",
    "frame-support/std",
    "frame-system/std",
    "ethereum/std",
    "sp-std/std",
]