[package]
name = "pallet-staking-runtime-api"
version = "4.0.0-dev"
edition = "2021"
license = "Apache-2.0"
homepage = "https://substrate.io"
repository = "https://github.com/paritytech/substrate/"
description = "RPC runtime API for transaction payment FRAME pallet"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", workspace = true, default-features = false, features = ["derive"] }
sp-api.workspace = true
pallet-staking.workspace = true
sp-std.workspace = true
sp-runtime.workspace = true
scale-info = { workspace = true, features = ["derive"] }
fp-account.workspace = true

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-api/std",
	"pallet-staking/std",
	"sp-std/std",
	"sp-runtime/std",
	"fp-account/std",
]
