[package]
name = "taker-mainnet-constants"
version = "1.0.0"
description = "The substrate runtime constants for taker Node development"
authors = { workspace = true }
homepage = { workspace = true}
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[dependencies]
# Taker
taker-common-constants = { workspace = true }
bp-core = { workspace = true }
sp-consensus-babe = { workspace = true }
# Substrate
frame-support = { workspace = true }

[features]
default = ["std"]
std = [
	"taker-common-constants/std",
	"frame-support/std",
	"sp-consensus-babe/std",
	"bp-core/std"
]
